--- a/app/templates/app/index.html
+++ b/app/templates/app/index.html
@@ -5,6 +5,7 @@
 <div class="jumbotron">
     <h1>Django</h1>
     <p class="lead">Django is a free web framework for building great Web sites and Web applications using HTML, CSS and JavaScript.</p>
+    <p>Alex, you can go to town customizing Layout.thml in //app/templates/app/ folder and this page to get the layout you want.</p>
     <p><a href="https://www.djangoproject.com/" class="btn btn-primary btn-large">Learn more &raquo;</a></p>
 </div>
 
