--- a/app/static/app/content/site.css
+++ b/app/static/app/content/site.css
@@ -1,13 +1,19 @@
 html, body{
   background-color: #efefef;
 }
+
+*{
+  box-sizing: border-box;
+  -webkit-font-smoothing: antialiased;
+}
 .tfn-header{
   background-color: #888888;
   text-align: center;
   padding-bottom: 10px;
 }
 .tfn-header .logo{
-  text-indent: -9999px;
+/*  text-indent: -9999px;*/
+  overflow: hidden;
   width: 100px;
   height: 50px;
   display: inline-block;
@@ -19,3 +25,25 @@ html, body{
   display: inline-block;
   background-color: #333;
 }*/
+
+.template, .hidden{
+  display: none;
+}
+
+.partial{
+  width: 940px;
+  margin: 0 auto;
+}
+
+.post{
+  margin-top: 10px;
+  padding: 10px;
+  font-size: 14px;
+  box-shadow: 0px 5px 5px -3px black;
+  border-radius: 2px;
+  background-color: white;
+}
+
+span.post.cloned{
+  display: block;
+}
