--- a/app/static/app/content/site.css
+++ b/app/static/app/content/site.css
@@ -2,36 +2,69 @@ html, body{
   background-color: #efefef;
 }
 
+@font-face {
+  font-family: 'IcoMoon-Free';
+  src: url('../fonts/IcoMoon-Free.ttf') format('truetype');
+  font-weight: normal;
+  font-style: normal;
+}
+
 *{
   box-sizing: border-box;
   -webkit-font-smoothing: antialiased;
 }
 .tfn-header{
-  background-color: #888888;
+  background-color: white;
   text-align: center;
-  padding-bottom: 10px;
 }
-.tfn-header .logo{
-/*  text-indent: -9999px;*/
-  overflow: hidden;
-  width: 100px;
-  height: 50px;
-  display: inline-block;
-  background-color: #eeeeee;
+
+.header-tabs{
+  width: 960px;
+  margin: 0 auto;
 }
-/*.tfn-header .home{
+
+.header-tabs{
+  content: "";
+  display: table;
+  clear: both;
+  border-left: 1px solid #efefef;
+  border-right: 1px solid #efefef;
+}
+
+.tab{
+  float: left;
+  line-height: 3em;
+  text-transform: uppercase;
+  font-size: 14px;
+  margin-left: 18px;
+  padding-left: 5px;
+  padding-right: 5px;
+}
+.tab.home{
   width: 100px;
-  height: 50px;
-  display: inline-block;
-  background-color: #333;
-}*/
+  height: 100%;
+  background-color: rgba(120, 120, 120, 0.25);
+  margin-right: 50px;
+  text-indent: -9999px;
+}
+
+.tab.account{
+  margin-left: 5px;
+  padding-left: 20px;
+  padding-right: 20px;
+}
+
+.tab:hover{
+  background-color: #efefef;
+  cursor: pointer;
+}
 
 .template, .hidden{
   display: none;
 }
 
 .partial{
-  width: 940px;
+  width: 960px;
   margin: 0 auto;
 }
 
@@ -46,4 +79,32 @@ html, body{
 
 span.post.cloned{
   display: block;
+}
+
+.icon {
+  font-family: 'IcoMoon-Free';
+  speak: none;
+  font-style: normal;
+  font-weight: normal;
+  font-variant: normal;
+  text-transform: none;
+  line-height: 1;
+  
+  /* Enable Ligatures ================ */
+  -webkit-font-feature-settings: "liga";
+  -moz-font-feature-settings: "liga=1";
+  -moz-font-feature-settings: "liga";
+  -ms-font-feature-settings: "liga" 1;
+  -o-font-feature-settings: "liga";
+  font-feature-settings: "liga";
+
+  /* Better Font Rendering =========== */
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+}
+i.icon.search:after{
+  content: 'search';
+}
+i.icon.user:after{
+  content: 'user';
 }
