--- a/app/templates/app/layout.html
+++ b/app/templates/app/layout.html
@@ -15,19 +15,23 @@
 
 <body>
   <header class="tfn-header">
-    <!-- Navigation for podcasts and sections -->
-    <div data-selection="proper" class="logo proper">Trinity Force Proper</div>
-    <div data-selection="rundown" class="logo rundown">LCS Rundown</div>
-    <div data-selection="ozlol" class="logo ozlol">Ozlol</div>
-    <!-- Main Home button -->
-    <div data-selection="home" class="logo home">Home</div>
-    <div data-selection="wards" class="logo wards">Four Wards</div>
-    <div data-selection="blogs" class="logo blogs">Blogs</div>
-    <div data-selection="wow" class="logo wow">WoW</div>
+    <div class="header-tabs">
+      <div class="tab home" data-selection="home">home</div>
+      <div class="tab league" data-selection="league">League of Legends</div>
+      <div class="tab smite" data-selection="smite">smite</div>
+      <div class="tab World of Warcraft" data-selection="wow">World of Warcraft</div>
+      <div class="tab csgo" data-selection="csgo">CS:GO</div>
+      <div class="tab search">
+        <i class="icon search"></i>
+        <input type="search">
+      </div>
+      <div class="tab account">
+        <i class="icon user"></i>
+      </div> 
+    </div>
   </header>
   <div id="tfn-app">
     {% block content %}{% endblock %}
-    
   </div>
   <footer>
     <p>&copy; {{ year }} - Trinity Force Network</p>
