--- a/app/static/app/content/sass/base/_fonts.sass
+++ b/app/static/app/content/sass/base/_fonts.sass
@@ -5,5 +5,5 @@
   font-style: normal
 
 @font-face 
-  font-family: 'nooa demi'
-  src: url('../fonts/Nooa-Demi.ttf') format('truetype')
+  font-family: 'nooa demi serif'
+  src: url('../fonts/Nooa-Demi-Serif.ttf') format('truetype')
