--- a/app/static/app/content/sass/base/_globals.sass
+++ b/app/static/app/content/sass/base/_globals.sass
@@ -1,7 +1,7 @@
 html, body
   -webkit-font-smoothing: antialiased
   background-color: $off-white
-  font-family: 'nooa demi'
+  font-family: 'nooa demi serif'
 *
   box-sizing: border-box
 .template, .hidden
