--- a/app/static/app/content/site.css
+++ b/app/static/app/content/site.css
@@ -5,12 +5,12 @@
   font-weight: normal;
   font-style: normal; }
 @font-face {
-  font-family: "nooa demi";
-  src: url("../fonts/Nooa-Demi.ttf") format("truetype"); }
+  font-family: "nooa demi serif";
+  src: url("../fonts/Nooa-Demi-Serif.ttf") format("truetype"); }
 html, body {
   -webkit-font-smoothing: antialiased;
   background-color: #efefef;
-  font-family: "nooa demi"; }
+  font-family: "nooa demi serif"; }
 
 * {
   box-sizing: border-box; }
