--- a/app/templates/app/layout.html
+++ b/app/templates/app/layout.html
@@ -35,7 +35,7 @@
       </div>
       <div class="dropdown-content">
         <div class="dropdown-channel" data-channel="proper">
-          <!-- <img src="images/proper-logo.png"> -->
+          <img src="{% static 'app/images' %}/proper-logo.png">
         </div>
         <div class="dropdown-channel" data-channel="ozlol"></div>
         <div class="dropdown-channel" data-channel="lcs"></div>
