--- a/app/static/app/content/sass/views/header/_header-home.sass
+++ b/app/static/app/content/sass/views/header/_header-home.sass
@@ -32,7 +32,15 @@
       height: 125px
       margin: 10px
       float: left
-      background-image: url('../images/b-splash.jpg')
+      background-size: 100% 100%
+      &[data-channel="proper"]
+        background-image: url('../images/sejuani/sejuani_2.jpg')
+      &[data-channel="lcs"]
+        background-image: url('../images/poppy/poppy_3.jpg')
+      &[data-channel="ozlol"]
+        background-image: url('../images/renekton/renekton_3.jpg')
+      &[data-channel="wards"]
+        background-image: url('../images/urf/urf_1.jpg')
       box-shadow: inset 0px 0px 250px 100px #6f6f6f
       -webkit-transition: box-shadow 0.5s ease
       img
