actually have fonts

--- a/app/static/app/content/sass/views/header/_header-home.sass
+++ b/app/static/app/content/sass/views/header/_header-home.sass
@@ -61,11 +61,13 @@
   margin-left: 18px
   padding-left: 5px
   padding-right: 5px
+  font-family: 'Slabo 27px'
+  font-size: 18px
   &.home
     width: 100px
     height: 100%
     background-color: rgba(120, 120, 120, 0.25)
-    margin-right: 50px
+    margin-right: 15px
     text-indent: -9999px
   &.search
     border-left: 1px solid #efefef
