--- a/app/static/app/content/sass/base/_fonts.sass
+++ b/app/static/app/content/sass/base/_fonts.sass
@@ -4,6 +4,7 @@
   font-weight: normal
   font-style: normal
 
-@font-face 
-  font-family: 'nooa demi serif'
-  src: url('../fonts/Nooa-Demi-Serif.ttf') format('truetype')
+@import url("http://fonts.googleapis.com/css?family=Roboto:400,300,500,700")
+
+@import url("http://fonts.googleapis.com/css?family=Slabo+27px")
+
