--- a/app/static/app/content/site.css
+++ b/app/static/app/content/site.css
@@ -1,16 +1,15 @@
 @import url(normalize.css);
+@import url("http://fonts.googleapis.com/css?family=Roboto:400,300,500,700");
+@import url("http://fonts.googleapis.com/css?family=Slabo+27px");
 @font-face {
   font-family: "IcoMoon-Free";
   src: url("../fonts/IcoMoon-Free.ttf") format("truetype");
   font-weight: normal;
   font-style: normal; }
-@font-face {
-  font-family: "nooa demi serif";
-  src: url("../fonts/Nooa-Demi-Serif.ttf") format("truetype"); }
 html, body {
   -webkit-font-smoothing: antialiased;
   background-color: #efefef;
-  font-family: "nooa demi serif"; }
+  font-family: "Roboto", sans-serif; }
 
 * {
   box-sizing: border-box; }
@@ -129,12 +128,14 @@ span.post.cloned {
   font-size: 14px;
   margin-left: 18px;
   padding-left: 5px;
-  padding-right: 5px; }
+  padding-right: 5px;
+  font-family: "Slabo 27px";
+  font-size: 18px; }
   .tab.home {
     width: 100px;
     height: 100%;
     background-color: rgba(120, 120, 120, 0.25);
-    margin-right: 50px;
+    margin-right: 15px;
     text-indent: -9999px; }
   .tab.search {
     border-left: 1px solid #efefef;
