--- a/app/static/app/content/sass/views/header/_header-home.sass
+++ b/app/static/app/content/sass/views/header/_header-home.sass
@@ -13,23 +13,28 @@
   border-right: 1px solid #efefef
   .header-dropdown
     position: absolute
-    background-color: #333333
+    background-color: white
     height: 0px
     width: 960px
     overflow: hidden
     margin: auto
     margin-top: 55px
+    +transition-default(height)
     &.expanded
       height: 175px
+      border: 1px solid #cfcfcf
+      border-top: 2px solid $mana-darker
+      box-shadow: inset 0px 50px 90px -60px #333
     .dropdown-content
       float: right
       margin-top: 30px
     .dropdown-channel
-      width: 175px
-      height: 125px
-      margin: 10px
+      width: 200px
+      height: 145px
       float: left
       background-size: 100% 100%
+      border: 1px solid #cfcfcf
+      border-right: none
       &[data-channel="proper"]
         background-image: url('../images/sejuani/sejuani_2.jpg')
       &[data-channel="lcs"]
@@ -38,45 +43,37 @@
         background-image: url('../images/renekton/renekton_3.jpg')
       &[data-channel="wards"]
         background-image: url('../images/urf/urf_1.jpg')
-      box-shadow: inset 0px 0px 250px 100px #6f6f6f
-      -webkit-transition: box-shadow 0.5s ease
+      box-shadow: inset 0px 0px 250px 50px white
+      +transition-default(box-shadow)
       img
         width: 150px
       &:hover
         cursor: pointer
-        box-shadow: inset 0px 0px 67px -6px #6f6f6f
-    .extras
-      width: 750px
-      position: absolute
-      right: 15px
-      top: 5px
-      .league
-        height: 15px
-        font-size: 10px
-        line-height: 1.5em
-        &.hp
-          background: linear-gradient(lighten($hp-red, 20%) 50%, $hp-red)
-          border-top-left-radius: 4px
-          border-top-right-radius: 4px
-        &.mana
-          margin-top: 2px
-          background: linear-gradient(lighten($mana-blue, 20%) 50%, $mana-blue)
+        box-shadow: inset 0px 0px 67px -6px white
     .dropdown-filter
       float: left
-      color: white
+      color: $mana-darker
+      text-align: right
+      font-size: 20px
+      margin-top: 40px
+      width: 150px
+      line-height: 2em
       .filter
         text-transform: uppercase
+        &:hover
+          cursor: pointer
+          color: $mana-blue
+
     
 .tab
   float: left
   line-height: 3em
   text-transform: uppercase
-  font-size: 14px
+  font-size: 16px
   margin-left: 18px
   padding-left: 5px
   padding-right: 5px
   font-family: 'Slabo 27px'
-  font-size: 18px
   &.home
     width: 100px
     height: 100%
