--- a/app/static/app/content/site.css
+++ b/app/static/app/content/site.css
@@ -81,25 +81,34 @@ span.post.cloned {
   border-right: 1px solid #efefef; }
   .header-tabs .header-dropdown {
     position: absolute;
-    background-color: #333333;
+    background-color: white;
     height: 0px;
     width: 960px;
     overflow: hidden;
     margin: auto;
-    margin-top: 55px; }
+    margin-top: 55px;
+    transition: height 0.5s ease;
+    -webkit-transition: height 0.5s ease;
+    -moz-transition: height 0.5s ease; }
     .header-tabs .header-dropdown.expanded {
-      height: 175px; }
+      height: 175px;
+      border: 1px solid #cfcfcf;
+      border-top: 2px solid #0ea6d9;
+      box-shadow: inset 0px 50px 90px -60px #333; }
     .header-tabs .header-dropdown .dropdown-content {
       float: right;
       margin-top: 30px; }
     .header-tabs .header-dropdown .dropdown-channel {
-      width: 175px;
-      height: 125px;
-      margin: 10px;
+      width: 200px;
+      height: 145px;
       float: left;
       background-size: 100% 100%;
-      box-shadow: inset 0px 0px 250px 100px #6f6f6f;
-      -webkit-transition: box-shadow 0.5s ease; }
+      border: 1px solid #cfcfcf;
+      border-right: none;
+      box-shadow: inset 0px 0px 250px 50px white;
+      transition: box-shadow 0.5s ease;
+      -webkit-transition: box-shadow 0.5s ease;
+      -moz-transition: box-shadow 0.5s ease; }
       .header-tabs .header-dropdown .dropdown-channel[data-channel="proper"] {
         background-image: url("../images/sejuani/sejuani_2.jpg"); }
       .header-tabs .header-dropdown .dropdown-channel[data-channel="lcs"] {
@@ -112,39 +121,30 @@ span.post.cloned {
         width: 150px; }
       .header-tabs .header-dropdown .dropdown-channel:hover {
         cursor: pointer;
-        box-shadow: inset 0px 0px 67px -6px #6f6f6f; }
-    .header-tabs .header-dropdown .extras {
-      width: 750px;
-      position: absolute;
-      right: 15px;
-      top: 5px; }
-      .header-tabs .header-dropdown .extras .league {
-        height: 15px;
-        font-size: 10px;
-        line-height: 1.5em; }
-        .header-tabs .header-dropdown .extras .league.hp {
-          background: linear-gradient(#ff464b 50%, #DF0006);
-          border-top-left-radius: 4px;
-          border-top-right-radius: 4px; }
-        .header-tabs .header-dropdown .extras .league.mana {
-          margin-top: 2px;
-          background: linear-gradient(#89dcf7 50%, #29bff1); }
+        box-shadow: inset 0px 0px 67px -6px white; }
     .header-tabs .header-dropdown .dropdown-filter {
       float: left;
-      color: white; }
+      color: #0ea6d9;
+      text-align: right;
+      font-size: 20px;
+      margin-top: 40px;
+      width: 150px;
+      line-height: 2em; }
       .header-tabs .header-dropdown .dropdown-filter .filter {
         text-transform: uppercase; }
+        .header-tabs .header-dropdown .dropdown-filter .filter:hover {
+          cursor: pointer;
+          color: #29bff1; }
 
 .tab {
   float: left;
   line-height: 3em;
   text-transform: uppercase;
-  font-size: 14px;
+  font-size: 16px;
   margin-left: 18px;
   padding-left: 5px;
   padding-right: 5px;
-  font-family: "Slabo 27px";
-  font-size: 18px; }
+  font-family: "Slabo 27px"; }
   .tab.home {
     width: 100px;
     height: 100%;
