--- a/app/static/app/content/sass/views/header/_header-home.sass
+++ b/app/static/app/content/sass/views/header/_header-home.sass
@@ -9,8 +9,8 @@
   content: ""
   display: table
   clear: both
-  border-left: 1px solid #efefef
-  border-right: 1px solid #efefef
+  border-left: 1px solid $off-white
+  border-right: 1px solid $off-white
   .header-dropdown
     position: absolute
     background-color: white
@@ -22,12 +22,11 @@
     +transition-default(height)
     &.expanded
       height: 175px
-      border: 1px solid #cfcfcf
-      border-top: 2px solid $mana-darker
-      box-shadow: inset 0px 50px 90px -60px #333
+      border: 1px solid $mana-darker
     .dropdown-content
       float: right
-      margin-top: 30px
+      margin-top: 15px
+      margin-right: 15px
     .dropdown-channel
       width: 200px
       height: 145px
@@ -35,6 +34,8 @@
       background-size: 100% 100%
       border: 1px solid #cfcfcf
       border-right: none
+      &:last-child
+        border-right: 1px solid #cfcfcf
       &[data-channel="proper"]
         background-image: url('../images/sejuani/sejuani_2.jpg')
       &[data-channel="lcs"]
@@ -55,8 +56,8 @@
       color: $mana-darker
       text-align: right
       font-size: 20px
-      margin-top: 40px
-      width: 150px
+      margin-top: 20px
+      width: 130px
       line-height: 2em
       .filter
         text-transform: uppercase
@@ -81,8 +82,8 @@
     margin-right: 15px
     text-indent: -9999px
   &.search
-    border-left: 1px solid #efefef
-    border-right: 1px solid #efefef
+    border-left: 1px solid $off-white
+    border-right: 1px solid $off-white
     margin-left: 15px
     &search:hover
       background-color: white
@@ -91,6 +92,6 @@
     padding-left: 26px
     padding-right: 20px
   &:hover, &.selected
-    background-color: #efefef
+    background-color: $off-white
     cursor: pointer  
 
