--- a/app/templates/app/layout.html
+++ b/app/templates/app/layout.html
@@ -47,7 +47,7 @@
             <img src="{% static 'app/images' %}/lcs-logo.png">
           </div>
           <div class="dropdown-channel" data-channel="wards">
-
+            <img src="{% static 'app/images' %}/wards-logo.png">
           </div>
         </div>
       </div> 
