--- a/app/static/app/content/sass/views/header/_header-home.sass
+++ b/app/static/app/content/sass/views/header/_header-home.sass
@@ -44,6 +44,8 @@
         background-image: url('../images/renekton/renekton_3.jpg')
       &[data-channel="wards"]
         background-image: url('../images/urf/urf_1.jpg')
+        img
+          margin-top: 40px
       box-shadow: inset 0px 0px 250px 50px white
       +transition-default(box-shadow)
       img
