--- a/app/static/app/content/site.css
+++ b/app/static/app/content/site.css
@@ -1,16 +1,15 @@
 @import url(normalize.css);
+@import url("http://fonts.googleapis.com/css?family=Roboto:400,300,500,700");
+@import url("http://fonts.googleapis.com/css?family=Slabo+27px");
 @font-face {
   font-family: "IcoMoon-Free";
   src: url("../fonts/IcoMoon-Free.ttf") format("truetype");
   font-weight: normal;
   font-style: normal; }
-@font-face {
-  font-family: "nooa demi serif";
-  src: url("../fonts/Nooa-Demi-Serif.ttf") format("truetype"); }
 html, body {
   -webkit-font-smoothing: antialiased;
   background-color: #efefef;
-  font-family: "nooa demi serif"; }
+  font-family: "Roboto", sans-serif; }
 
 * {
   box-sizing: border-box; }
@@ -82,28 +81,35 @@ span.post.cloned {
   border-right: 1px solid #efefef; }
   .header-tabs .header-dropdown {
     position: absolute;
-    background-color: #efefef;
+    background-color: white;
     height: 0px;
     width: 960px;
     overflow: hidden;
     margin: auto;
-    margin-top: 42px; }
+    margin-top: 55px;
+    transition: height 0.5s ease;
+    -webkit-transition: height 0.5s ease;
+    -moz-transition: height 0.5s ease; }
     .header-tabs .header-dropdown.expanded {
-      height: 150px; }
-    .header-tabs .header-dropdown:after {
-      content: "";
-      display: table;
-      clear: both; }
+      height: 175px;
+      border: 1px solid #0ea6d9; }
     .header-tabs .header-dropdown .dropdown-content {
-      float: right; }
+      float: right;
+      margin-top: 15px;
+      margin-right: 15px; }
     .header-tabs .header-dropdown .dropdown-channel {
-      width: 175px;
-      height: 125px;
-      margin: 10px;
+      width: 200px;
+      height: 145px;
       float: left;
       background-size: 100% 100%;
-      box-shadow: inset 0px 0px 250px 100px #6f6f6f;
-      -webkit-transition: box-shadow 0.5s ease; }
+      border: 1px solid #cfcfcf;
+      border-right: none;
+      box-shadow: inset 0px 0px 250px 50px white;
+      transition: box-shadow 0.5s ease;
+      -webkit-transition: box-shadow 0.5s ease;
+      -moz-transition: box-shadow 0.5s ease; }
+      .header-tabs .header-dropdown .dropdown-channel:last-child {
+        border-right: 1px solid #cfcfcf; }
       .header-tabs .header-dropdown .dropdown-channel[data-channel="proper"] {
         background-image: url("../images/sejuani/sejuani_2.jpg"); }
       .header-tabs .header-dropdown .dropdown-channel[data-channel="lcs"] {
@@ -112,29 +118,41 @@ span.post.cloned {
         background-image: url("../images/renekton/renekton_3.jpg"); }
       .header-tabs .header-dropdown .dropdown-channel[data-channel="wards"] {
         background-image: url("../images/urf/urf_1.jpg"); }
+        .header-tabs .header-dropdown .dropdown-channel[data-channel="wards"] img {
+          margin-top: 40px; }
       .header-tabs .header-dropdown .dropdown-channel img {
         width: 150px; }
       .header-tabs .header-dropdown .dropdown-channel:hover {
         cursor: pointer;
-        box-shadow: inset 0px 0px 67px -6px #6f6f6f; }
+        box-shadow: inset 0px 0px 67px -6px white; }
     .header-tabs .header-dropdown .dropdown-filter {
-      float: left; }
+      float: left;
+      color: #0ea6d9;
+      text-align: right;
+      font-size: 20px;
+      margin-top: 20px;
+      width: 130px;
+      line-height: 2em; }
       .header-tabs .header-dropdown .dropdown-filter .filter {
         text-transform: uppercase; }
+        .header-tabs .header-dropdown .dropdown-filter .filter:hover {
+          cursor: pointer;
+          color: #29bff1; }
 
 .tab {
   float: left;
   line-height: 3em;
   text-transform: uppercase;
-  font-size: 14px;
+  font-size: 16px;
   margin-left: 18px;
   padding-left: 5px;
-  padding-right: 5px; }
+  padding-right: 5px;
+  font-family: "Slabo 27px"; }
   .tab.home {
     width: 100px;
     height: 100%;
     background-color: rgba(120, 120, 120, 0.25);
-    margin-right: 50px;
+    margin-right: 15px;
     text-indent: -9999px; }
   .tab.search {
     border-left: 1px solid #efefef;
